@@ -31,6 +31,7 @@ Release 0.1.2 - 04/24/2008
    HBASE-607   MultiRegionTable.makeMultiRegionTable is not deterministic enough
                for regression tests
    HBASE-478   offlining of table does not run reliably
+   HBASE-618   We always compact if 2 files, regardless of the compaction threshold setting
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
